force-app/main/default/objects/PaidHolidays__c/PaidHolidays__c.object-meta.xml
<CustomObject>
    <label>有給休暇</label>
    <nameField>
        <displayFormat>有給休暇No{0000}</displayFormat>
        <label>有給休暇No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>