force-app/main/default/objects/PaidHolidays__c/fields/CarryForwardDays__c.field-meta.xml
<CustomField>
    <fullName>CarryForwardDays__c</fullName>
    <label>繰越残（日数）</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>