force-app/main/default/objects/PaidHolidays__c/fields/CarryForwardTime__c.field-meta.xml
<CustomField>
    <fullName>CarryForwardTime__c</fullName>
    <label>繰越残（時間）</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>