force-app/main/default/objects/PaidHolidays__c/fields/CarryOverDays__c.field-meta.xml
<CustomField>
    <fullName>CarryOverDays__c</fullName>
    <label>繰越日数</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>