force-app/main/default/objects/PaidHolidays__c/fields/CarryOverDigestionDays__c.field-meta.xml
<CustomField>
    <fullName>CarryOverDigestionDays__c</fullName>
    <label>繰越消化（日数）</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>