force-app/main/default/objects/PaidHolidays__c/fields/CarryOverDigestionTime__c.field-meta.xml
<CustomField>
    <fullName>CarryOverDigestionTime__c</fullName>
    <label>繰越消化（時間）</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>