force-app/main/default/objects/PaidHolidays__c/fields/CarryOverTime__c.field-meta.xml
<CustomField>
    <fullName>CarryOverTime__c</fullName>
    <label>繰越時間</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>