force-app/main/default/objects/PaidHolidays__c/fields/DataLock__c.field-meta.xml
<CustomField>
    <fullName>DataLock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>データロック</label>
    <type>Checkbox</type>
</CustomField>