force-app/main/default/objects/PaidHolidays__c/fields/DifferenceDays__c.field-meta.xml
<CustomField>
    <fullName>DifferenceDays__c</fullName>
    <label>[システム]差分日数</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>