force-app/main/default/objects/PaidHolidays__c/fields/DifferenceTime__c.field-meta.xml
<CustomField>
    <fullName>DifferenceTime__c</fullName>
    <label>[システム]差分時間</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>