force-app/main/default/objects/PaidHolidays__c/fields/GrantDate__c.field-meta.xml
<CustomField>
    <fullName>GrantDate__c</fullName>
    <label>付与年月日</label>
    <type>Date</type>
</CustomField>