force-app/main/default/objects/PaidHolidays__c/fields/GrantDays__c.field-meta.xml
<CustomField>
    <fullName>GrantDays__c</fullName>
    <label>付与日数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>