force-app/main/default/objects/PaidHolidays__c/fields/GrantDigestionDays__c.field-meta.xml
<CustomField>
    <fullName>GrantDigestionDays__c</fullName>
    <label>付与消化（日数）</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>