force-app/main/default/objects/PaidHolidays__c/fields/GrantDigestionTime__c.field-meta.xml
<CustomField>
    <fullName>GrantDigestionTime__c</fullName>
    <label>付与消化（時間）</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>