force-app/main/default/objects/PaidHolidays__c/fields/NextGrantDate__c.field-meta.xml
<CustomField>
    <fullName>NextGrantDate__c</fullName>
    <label>次回付与年月日</label>
    <type>Date</type>
</CustomField>