force-app/main/default/objects/PaidHolidays__c/fields/PaidDigestionDays__c.field-meta.xml
<CustomField>
    <fullName>PaidDigestionDays__c</fullName>
    <formula>IF(8 &lt;= GrantDigestionTime__c + CarryOverDigestionTime__c,
GrantDigestionDays__c + CarryOverDigestionDays__c + 1,
GrantDigestionDays__c + CarryOverDigestionDays__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有休消化日数</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>