force-app/main/default/objects/PaidHolidays__c/fields/PaidDigestionTime__c.field-meta.xml
<CustomField>
    <fullName>PaidDigestionTime__c</fullName>
    <formula>IF(8 &lt;= GrantDigestionTime__c + CarryOverDigestionTime__c,
GrantDigestionTime__c + CarryOverDigestionTime__c - 8,
GrantDigestionTime__c + CarryOverDigestionTime__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>有休消化時間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>