force-app/main/default/objects/PaidHolidays__c/fields/PaidLapseDays__c.field-meta.xml
<CustomField>
    <fullName>PaidLapseDays__c</fullName>
    <label>有休消滅（日数）</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>