force-app/main/default/objects/PaidHolidays__c/fields/PaidLapseTime__c.field-meta.xml
<CustomField>
    <fullName>PaidLapseTime__c</fullName>
    <label>有休消滅（時間）</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>