force-app/main/default/objects/PaidHolidays__c/fields/PaidLeaveRemainingDays__c.field-meta.xml
<CustomField>
    <fullName>PaidLeaveRemainingDays__c</fullName>
    <label>有休残日数</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>