force-app/main/default/objects/PaidHolidays__c/fields/PaidLeaveRemainingTime__c.field-meta.xml
<CustomField>
    <fullName>PaidLeaveRemainingTime__c</fullName>
    <label>有休残時間</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>