force-app/main/default/objects/PaidHolidays__c/fields/PaidRequest__c.field-meta.xml
<CustomField>
    <fullName>PaidRequest__c</fullName>
    <label>[システム]有休申請</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>申請</fullName>
            </value>
            <value>
                <fullName>削除</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>