force-app/main/default/objects/PaidHolidays__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>年度（期）</label>
    <length>4</length>
    <type>Text</type>
</CustomField>