force-app/main/default/objects/PaidHolidays__c/fields/RemainingGrantDays__c.field-meta.xml
<CustomField>
    <fullName>RemainingGrantDays__c</fullName>
    <label>付与残（日数）</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>