force-app/main/default/objects/PaidHolidays__c/fields/RemainingGrantTime__c.field-meta.xml
<CustomField>
    <fullName>RemainingGrantTime__c</fullName>
    <label>付与残（時間）</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>