force-app/main/default/objects/PaidHolidays__c/fields/RemainingUntilNextGrant__c.field-meta.xml
<CustomField>
    <fullName>RemainingUntilNextGrant__c</fullName>
    <formula>(DATE( YEAR( NextGrantDate__c ), MONTH( NextGrantDate__c ), DAY( NextGrantDate__c )) - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>次回有休付与までの日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>