force-app/main/default/objects/PaidHolidays__c/fields/TriggerUpdate__c.field-meta.xml
<CustomField>
    <fullName>TriggerUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>トリガ更新</label>
    <type>Checkbox</type>
</CustomField>